# tree-sitter-lp

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml
bindings/c/: tree-sitter-lp.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lp/: __init__.py  binding.c
bindings/python/tree_sitter_lp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLp/: lp.h
bindings/swift/TreeSitterLpTests/: TreeSitterLpTests.swift
queries/: folds.scm  highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: bounds.txt  comments.txt  constraints.txt  examples.txt  full_problems.txt  numbers.txt  objectives.txt  sense.txt  sos.txt  variable_types.txt
