[package]
name = "tree-sitter-lp"
description = "Tree-sitter grammar for LP (Linear Programming) files"
version = "0.1.0"
authors = ["Dan"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lp"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/dandxy89/tree-sitter-lp"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.7"

[build-dependencies]
cc = "1.2.56"

[dev-dependencies]
tree-sitter = "0.26.5"
